--- a/biko_hr/templates/welcome.html
+++ b/biko_hr/templates/welcome.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>{% block title %}Welcome - Aplus HR{% endblock %}</title>
+    <title>{% block title %}Hoşgeldiniz - APlus HR{% endblock %}</title>
 </head>
 
 <div class="container-fluid d-flex align-items-center justify-content-center"
@@ -19,8 +19,8 @@
              class="img-fluid mb-4"
              style="max-width: 70%; height: auto;" />
         <div>
-            <a href="{% url 'log-in' %}" class="btn btn-primary mr-2">Login</a>
-            <a href="{% url 'sign-up' %}" class="btn btn-outline-primary">Register</a>
+            <a href="{% url 'log-in' %}" class="btn btn-primary mr-2">Giriş Yap</a>
+            <a href="{% url 'sign-up' %}" class="btn btn-outline-primary">Kayıt Ol</a>
         </div>
     </div>
 </div>
